syntax ="proto3";

package go.micro.svr.consignment;

service ShippingService {
    rpc CreateConsignment(Consignment) returns(Response) {

    }
    rpc GetAll()returns() {

    }
}

message Consignment {

}

message Container {

}

message  Response{

}

message GetRequest{

}